--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+.hero{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+img{
+    width: 70%;
+    height: 400px;
+    object-fit: cover;
+}
+.context{
+    text-align: center;
+    padding: 30px;
+    
+}
+button{
+    padding: 10px;
+    background-color: orangered;
+    color: white;
+    border-radius: 3px; 
+    border: none;  
+}
+a{
+    text-decoration: none;
+    color: white;   
+}
